--- a/app/components/artist/artist.component.html
+++ b/app/components/artist/artist.component.html
@@ -1,4 +1,9 @@
 <div *ngIf="artist">
-{{artist.name}}
+	<header>
+	<div *ngIf="artist.images.length>0">
+		<img src="{{artist.images[0].url}}" alt="" class="artist-thumb img-circle">
+	</div>
+	</header>
+   
 
 </div>
